--- a/eda_and_training/sentiment-analysis.ipynb
+++ b/eda_and_training/sentiment-analysis.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "books = pd.read_csv(\"books_with_categories.csv\")"
+    "books = pd.read_csv(\"data/books_with_categories.csv\")"
    ],
    "outputs": [],
    "execution_count": 1
