Update CSV file path in text classification notebook

--- a/eda_and_training/text-classification.ipynb
+++ b/eda_and_training/text-classification.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "books = pd.read_csv(\"books_cleaned.csv\")"
+    "books = pd.read_csv(\"data/books_cleaned.csv\")"
    ],
    "outputs": [],
    "execution_count": 1
