--- a/eda_and_training/text-classification.ipynb
+++ b/eda_and_training/text-classification.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "books = pd.read_csv(\"data/books_cleaned.csv\")"
+    "books = pd.read_csv(\"Book_Recommendation_Engine/data/books_cleaned.csv\")"
    ],
    "outputs": [],
    "execution_count": 1
@@ -2698,7 +2698,7 @@
     }
    },
    "cell_type": "code",
-   "source": "books.to_csv(\"data/books_with_categories.csv\", index=False)",
+   "source": "books.to_csv(\"Book_Recommendation_Engine/data/books_with_categories.csv\", index=False)",
    "id": "d3a893353055d2a0",
    "outputs": [],
    "execution_count": 34
