Update file paths in vector-search.ipynb

--- a/eda_and_training/vector-search.ipynb
+++ b/eda_and_training/vector-search.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "books = pd.read_csv(\"books_cleaned.csv\")\n",
+    "books = pd.read_csv(\"Book_Recommendation_Engine/data/books_cleaned.csv\")\n",
     "books"
    ],
    "id": "e989b4ae1ef4d81d",
@@ -452,7 +452,7 @@
     }
    },
    "cell_type": "code",
-   "source": "books[\"tagged_description\"].to_csv(\"tagged_description.txt\", index=False, sep=\"\\n\", header=False)",
+   "source": "books[\"tagged_description\"].to_csv(\"Book_Recommendation_Engine/tagged_description.txt\", index=False, sep=\"\\n\", header=False)",
    "id": "715e05aea82936d0",
    "outputs": [],
    "execution_count": 105
@@ -466,7 +466,7 @@
    },
    "cell_type": "code",
    "source": [
-    "raw_documents = TextLoader(\"tagged_description.txt\", encoding=\"utf-8\").load()\n",
+    "raw_documents = TextLoader(\"Book_Recommendation_Engine/tagged_description.txt\", encoding=\"utf-8\").load()\n",
     "text_splitter = RecursiveCharacterTextSplitter(chunk_size=1, chunk_overlap=0, separators=[\"\\n\"])\n",
     "documents = text_splitter.split_documents(raw_documents)"
    ],
