Update CSV export path for cleaned books data

--- a/eda_and_training/data-exploration.ipynb
+++ b/eda_and_training/data-exploration.ipynb
@@ -2883,7 +2883,7 @@
    "source": [
     "(\n",
     "    books_missing_25_words.drop([\"missing_description\", \"age_of_book\", \"subtitle\", \"words_in_description\"], axis=1)\n",
-    "    .to_csv(\"data/books_cleaned.csv\", index=False)\n",
+    "    .to_csv(\"Book_Recommendation_Engine/data/books_cleaned.csv\", index=False)\n",
     ")"
    ],
    "id": "bfa220cc83b11df9",
